# examples

./: .gitignore  README.md
s2-clay/: .env.example  .gitignore  README.md  clay_inference.py  geotiff.py  pyproject.toml  sentinel2zarr.py
s2-clay/infrastructure/: .gitignore  Pulumi.dev.yaml  Pulumi.yaml  README.md  __main__.py  pyproject.toml
s2-cloudfree-mosaic/: .gitignore  README.md  S2 Cloudfree Mosaic.ipynb  pyproject.toml  sentinel2zarr.py
workflows-cron-automation-py/: .env  README.md  cron_automation.py  pyproject.toml
workflows-download-s2-for-aois/: .env  README.md  coords.csv  download_workflow.py  helpers.py  pyproject.toml  submit_job.py
workflows-hello-world-py/: .env  README.md  Tilebox Workflows Hello World.ipynb  pyproject.toml
workflows-multilang/: README.md
workflows-multilang/go-server/: go.mod  go.sum  main.go
workflows-multilang/python-runner/: pyproject.toml  runner.py
workflows-sentinel2-to-zarr/: .env.example  .gitignore  S2 Zarr.ipynb  pyproject.toml  sentinel2zarr.py
wyvern-hyperspectral-pca/: .gitignore  README.md  distributed_pca.py  pyproject.toml  wyvern_pca.py
