[project]
name = "infrastructure"
version = "0.1.0"
description = "IaC for a Sentinel-2 Clay based change detection Tilebox Workflow on Open Telekom Cloud."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pulumi>=3.186.0",
    "pulumi-opentelekomcloud",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404",
    "ruff>=0.12.7",
]

[tool.uv.sources]
pulumi-opentelekomcloud = { path = "sdks/opentelekomcloud" }

[tool.ruff]
# settings applying to all ruff subcommands, such as `ruff check` (lint) and `ruff format`
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
# all rules: https://docs.astral.sh/ruff/rules/
ignore = [
    # some ruff checking modules don't make much sense as a whole
    "D",   # pydocstyle: pretty strict anyways
    "FBT", # flake8-boolean-trap: boolean arguments can make sense
    "COM", # flake8-commas: formatter takes care of this
    "DTZ", # flake8-datetimez: utc datetimes are useful
    "DJ",  # flake8-django: not needed
    "EM",  # flake8-errmsg: str directly in Exception constructor is accetable
    # specific rules
    "ANN401",  # any-type: allow Any in *args and **kwargs
    "S101",    # assert: allow usage of assert
    "B008",    # function-call-argument-default: some default argument values make sense to be function calls
    "G004",    # logging-f-string: allow usage of f-strings in logging calls
    "PLR2004", # magic-value-comparison: sometimes comparison with constants (e.g. 0) makes sense
    "TRY003",  # raise-vanilla-args: exceptions like this make sense in python
    "TRY400",  # error-instead-of-exception: logger.error is ok with loguru
    "S104",    # hardcoded-bind-all-interfaces: we allow binding 0.0.0.0 
    # disabled because of formatter
    "E501",   # line-too-long -> formatter takes care of this
    "ISC001", # single-line-implicit-str-concatenation -> formatter takes care of this
    "Q",      # flake8-quotes -> formatter takes care of this
    "W191",   # tab-indentation -> formatter takes care of this
    # disabled because we allow TODOs in this repo
    "TD",
    "FIX",
]

unfixable = [
    "F841", # unused-variable -> don't remove them automatically
    "ERA",  # eradicate -> (commented out code), don't remove it automatically
]

[tool.pyright]
venvPath = "."
venv = ".venv"

# ignore warnings in those files, but still type check them when used as a dependency in other files
ignore = ["sdks/opentelekomcloud"]
